--- a/understanding.html
+++ b/understanding.html
@@ -1,3 +1,5 @@
 <h1>This is also my first html. Still figuring things out</h1>
 <h2>I think Im loving this but still complicated</h2>
 <h3>gosh how long will this take hmmmmm</h3>
+
+<p> it doesnt take time but patience</p>
